test/conformance/chainsaw/cleanup/clusterpolicy/context-cleanup-pod/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
spec:
  containers:
  - image: nginx:latest
    name: example
