test/conformance/chainsaw/cleanup/clusterpolicy/context-cleanup-pod/policy.yaml
apiVersion: kyverno.io/v2
kind: ClusterCleanupPolicy
metadata:
  name: cleanup-pod
spec:
  context:
    - name: varNamespace
      apiCall:
        urlPath: "/api/v1/namespaces/default"
        jmesPath: metadata.name
    - name: varname
      variable:
        value: "example"
  match:
    any:
      - resources:
          kinds:
            - Pod
  conditions:
    all:
      - key: "{{ target.metadata.name }}"
        operator: Equals
        value: "{{ varname }}"
      - key: "{{ target.metadata.namespace }}"
        operator: Equals
        value: "{{ varNamespace }}"
  ## execute every minute
  schedule: "*/1 * * * *"
