test/conformance/chainsaw/cleanup/clusterpolicy/context-cleanup-pod/01-rbac.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: rbac
spec:
  timeouts: {}
  try:
  - apply:
      file: rbac.yaml
