test/conformance/chainsaw/cleanup/clusterpolicy/context-cleanup-pod/02-pod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pod
spec:
  timeouts: {}
  try:
  - apply:
      check: null
      file: pod.yaml
  - assert:
      file: pod-assert.yaml
