test/conformance/chainsaw/cleanup/clusterpolicy/context-cleanup-pod/03-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policy
spec:
  timeouts: {}
  try:
  - apply:
      check: null
      file: policy.yaml
  - assert:
      file: policy.yaml
