test/conformance/chainsaw/cleanup/clusterpolicy/context-cleanup-pod/04-sleep.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: sleep
spec:
  timeouts: {}
  try:
  - script:
      content: sleep 5
    timeout: 10s
