test/conformance/chainsaw/cleanup/clusterpolicy/context-cleanup-pod/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: context-cleanup-pod
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: rbac.yaml
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
  - name: step-03
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-05
    try:
    - error:
        file: pod-assert.yaml
